# 3-body-simulation

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  default_config.json  main.cpp  two_sun_config.json
include/: body.hpp  com_parser.hpp  data_writer.hpp  logger.hpp  mass.hpp  n_body_system.hpp  read_config.hpp  simulation.hpp
python/: pyproject.toml
python/n_body_vis/: visualize.py  writer.py
python/tests/: test_visualize.py
src/: CMakeLists.txt  body.cpp  com_parser.cpp  data_writer.cpp  logger.cpp  main.cpp  mass.cpp  mass.hpp  n_body_system.cpp  physics.cpp  physics.hpp  read_config.cpp  simulation.cpp
tests/: CMakeLists.txt  test_body.cpp  test_com_parser.cpp  test_config.json  test_config_reader.cpp  test_data_writer.cpp  test_logger.cpp  test_mass.cpp  test_n_body_system.cpp  test_simulation.cpp
