[tool.poetry]
name = "n-body-vis"
version = "0.1.0"
description = ""
authors = ["Florian Wiesner <wiesnerflorian94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyvista = {extras = ["all"], version = "^0.43.6"}
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
